<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <item
        android:id="@+id/back"
        android:title="@string/action_back"
        android:icon="@drawable/back"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/help"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/save"
        android:title="@string/action_save_status"
        android:icon="@drawable/save"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/delete"
        android:title="@string/action_delete_status"
        android:icon="@drawable/delete"
        app:showAsAction="always"
        />
</menu>