<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.elaya.mytodo.project.ProjectActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/main_bg_toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context="org.elaya.mytodo.project.ProjectActivity"
        tools:showIn="@layout/activity_project"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="8dp"
        android:id="@+id/projectHeader"
        android:paddingStart="8dp">

            <TextView
                android:id="@+id/projectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/table_header"
                android:text="@string/Project_name" />

            <TextView
                android:id="@+id/numFinished"
                style="@style/table_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end"

                android:text="@string/head_title_finished" />

            <TextView
                android:id="@+id/numActive"
                style="@style/table_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end"
                android:text="@string/head_title_active" />

            <TextView
                android:id="@+id/numNotActive"
                style="@style/table_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end"
                android:text="@string/head_title_wait" />


        </LinearLayout>
        <TextView
            android:id="@+id/noProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_project"
            android:visibility="gone"
            />
        <ListView
            android:id="@+id/projectList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:longClickable="true"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

    </LinearLayout>

</LinearLayout>