<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.elaya.mytodo.EditToDoActivity"
    android:fitsSystemWindows="true"
    >




    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>




        <TextView
        android:id="@+id/textView3"
        style="@style/formLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/title"
        android:text="@string/label_todo_title" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        style="@style/formLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_todo_status"
        android:labelFor="@+id/status"
        />

    <Spinner
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView9"
        style="@style/formLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_start_date" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDatePicker"
            android:src="@drawable/date" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        style="@style/formLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_end_date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="endDatePicker"
            android:src="@drawable/date" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        style="@style/formLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/comment"
        android:text="@string/label_todo_comment" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top"
        android:inputType="text|textMultiLine"
        android:minLines="5" />


</LinearLayout>
</ScrollView>